feedback/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-backend
  namespace: feedback
  labels:
    app: feedback-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback-backend
  template:
    metadata:
      labels:
        app: feedback-backend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: feedback-backend
        image: registry.flou21.de/feedback-backend:792c574d-af56-441f-b993-349c85edd9b6
        ports:
          - containerPort: 3000
          - containerPort: 2112
        resources:
          requests:
            memory: "50Mi"
            cpu: "30m"
---
apiVersion: v1
kind: Service
metadata:
  name: feedback-backend
  namespace: feedback
spec:
  selector:
    app: feedback-backend
  ports:
    - port: 3000
      targetPort: 3000
      name: api
---
apiVersion: v1
kind: Service
metadata:
  name: feedback-metrics-service
  namespace: feedback
  labels:
    app: feedback-metrics-service
spec:
  selector:
    app: feedback-backend
  ports:
  - port: 2112
    targetPort: 2112
    name: metrics
    protocol: TCP
